<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InitialScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/startup_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/initial_screen_title"
            android:textColor="@color/primary_color"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/initial_screen_text"
            android:textColor="@color/gray"
            android:textSize="17sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/material_button_style"
        android:layout_width="match_parent"
        android:layout_marginStart="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="25dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sign_up_text"
        android:textAllCaps="false"
        android:textColor="@color/primary_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:strokeColor="@color/primary_color"
        app:strokeWidth="1.7dp" />

</LinearLayout>